# lattice-ipc

./: CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_anomaly.cpp  bench_obs.cpp  bench_shm.cpp  bench_signals.cpp  bench_simulator.cpp
cmake/: CompileOptions.cmake  LatticeVersion.cmake
include/lattice/: feed_event.hpp
include/lattice/anomaly/: anomaly_detector.hpp  burst_alert.hpp  burst_detector.hpp  cancel_spike_alert.hpp  cancel_spike_detector.hpp  layering_alert.hpp  layering_detector.hpp  pending_order.hpp  spoof_alert.hpp  symbol_scorer.hpp  welford_stats.hpp
include/lattice/config/: lattice_config.hpp
include/lattice/obs/: latency_histogram.hpp  pipeline_stats.hpp  queue_depth_tracker.hpp
include/lattice/recovery/: watchdog.hpp
include/lattice/shm/: shm_channel.hpp  shm_error.hpp  shm_layout.hpp  shm_reader.hpp  shm_reader_impl.hpp  shm_writer.hpp  shm_writer_impl.hpp
include/lattice/signals/: feed_decoder.hpp  order_book.hpp  rolling_window.hpp  signal_engine.hpp  signal_snapshot.hpp
include/lattice/sim/: market_simulator.hpp
include/lattice/util/: result.hpp
src/anomaly/: CMakeLists.txt  anomaly_detector.cpp  burst_detector.cpp  cancel_spike_detector.cpp  layering_detector.cpp  symbol_scorer.cpp  welford_stats.cpp
src/obs/: CMakeLists.txt  pipeline_stats.cpp
src/shm/: CMakeLists.txt  shm_channel.cpp  shm_reader.cpp  shm_writer.cpp
src/signals/: CMakeLists.txt  order_book.cpp  signal_engine.cpp
tests/: CMakeLists.txt  test_anomaly.cpp  test_hardening.cpp  test_obs.cpp  test_shm.cpp  test_signals.cpp  test_simulator.cpp  test_stress.cpp
tools/: CMakeLists.txt  run_simulation.cpp
